resources/manifest/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: $(NAMESPACE)
spec:
  selector:
    app: gwangju-app
  ports:
  - port: 80
    targetPort: 8080
