resources/manifest/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $(ALB_INGRESS_NAME)
  namespace: $(NAMESPACE)
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: $(ALB_DNS_NAME)
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: app-service
              port:
                number: 80
